return library from luaopen_util

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,7 @@ target_compile_definitions(lrexlib_static PRIVATE
 target_link_libraries(lrexlib_static PUBLIC lua_static pcre2-posix)
 
 add_library(lualibs
-  lualibs.h
-  lutil.c
+  lutil/lutil.c
   # lbc
   lbc/lbc.c
   lbc/src/config.h
