--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "pcre2"]
 	path = pcre2
 	url = https://github.com/PCRE2Project/pcre2.git
+[submodule "lua-cjson"]
+	path = lua-cjson
+	url = https://github.com/mpx/lua-cjson.git
