create separate CMakeLists.txts for each module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "base64"]
-	path = base64
+	path = lbase64/base64
 	url = https://github.com/aklomp/base64.git
 [submodule "lbc"]
-	path = lbc
+	path = lbc/lbc
 	url = https://github.com/jnbooth/lbc-101.git
 [submodule "lpeg"]
-	path = lpeg
+	path = lpeg/lpeg
 	url = https://github.com/roberto-ieru/LPeg.git
 [submodule "lrexlib"]
-	path = lrexlib
+	path = lrexlib/lrexlib
 	url = https://github.com/rrthomas/lrexlib.git
 [submodule "lua"]
 	path = lua
 	url = https://github.com/walterschell/Lua.git
 [submodule "pcre2"]
-	path = pcre2
+	path = lrexlib/pcre2
 	url = https://github.com/PCRE2Project/pcre2.git
 [submodule "lua-cjson"]
-	path = lua-cjson
+	path = lua-cjson/lua-cjson
 	url = https://github.com/mpx/lua-cjson.git
