--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,57 +3,49 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(lualibs LANGUAGES C VERSION 0.1.0)
 
-add_subdirectory(base64)
 add_subdirectory(lua)
-add_subdirectory(pcre2)
+include_directories(${LUA_INCLUDE_DIR})
 
-add_library(lrexlib_static STATIC
-  lrexlib/src/algo.h
-  lrexlib/src/common.c
-  lrexlib/src/common.h
-  lrexlib/src/pcre2/lpcre2.c
-  lrexlib/src/pcre2/lpcre2_f.c
-)
-target_include_directories(lrexlib_static PRIVATE pcre2/src)
-target_compile_definitions(lrexlib_static PRIVATE
-  PCRE2_CODE_UNIT_WIDTH=8
-  VERSION="10.44"
-)
-target_link_libraries(lrexlib_static PUBLIC lua_static pcre2-posix)
+add_subdirectory(lbase64)
+add_subdirectory(lbc)
+add_subdirectory(lpeg)
+add_subdirectory(lrexlib)
+add_subdirectory(lsqlite3)
+add_subdirectory(LuaBitOp)
+add_subdirectory(lua-cjson)
 
-add_library(lualibs
-  # lbase64
-  lbase64/lbase64.c
-  # lbc
-  lbc/lbc.c
-  lbc/src/config.h
-  lbc/src/number.h lbc/src/number.c
-  # lpeg
-  lpeg/lpcap.h lpeg/lpcap.c
-  lpeg/lpcode.h lpeg/lpcode.c
-  lpeg/lpcset.h lpeg/lpcset.c
-  lpeg/lpprint.h lpeg/lpprint.c
-  lpeg/lptree.h lpeg/lptree.c
-  lpeg/lptypes.h
-  lpeg/lpvm.h lpeg/lpvm.c
-  # lsqlite3
-  lsqlite3/lsqlite3.c
-  lsqlite3/sqlite3.h lsqlite3/sqlite3.c
-  # LuaBitOp
-  LuaBitOp/bit.c
-  # lua-cjson
-  lua-cjson/dtoa_config.h
-  lua-cjson/dtoa.c
-  lua-cjson/fpconv.h lua-cjson/fpconv.c
-  lua-cjson/g_fmt.c
-  lua-cjson/lua_cjson.c
-  lua-cjson/strbuf.h lua-cjson/strbuf.c
+target_link_libraries(lbase64 PRIVATE lua_static)
+target_link_libraries(lbc PRIVATE lua_static)
+target_link_libraries(lpeg PRIVATE lua_static)
+target_link_libraries(lrexlib PRIVATE lua_static)
+target_link_libraries(lsqlite3 PRIVATE lua_static)
+target_link_libraries(luabitop PRIVATE lua_static)
+target_link_libraries(lua-cjson PRIVATE lua_static)
+
+add_library(lualibs)
+
+target_link_libraries(lualibs
+  PUBLIC
+  lua_static
+  lbase64
+  lbc
+  lpeg
+  lrexlib
+  lsqlite3
+  luabitop
+  lua-cjson
 )
 
-target_include_directories(lualibs PRIVATE lbc/src)
-target_include_directories(lualibs PUBLIC lsqlite3)
+if (MSVC)
+  target_compile_options(
+    lrexlib_static
+    PUBLIC
+    /wd4267
+    /wd4244
+    /wd4005
+    /wd4996
+    /wd4311
+  )
+endif ()
 
-target_link_libraries(lualibs PUBLIC lua_static lrexlib_static)
-target_link_libraries(lualibs PRIVATE base64)
-
-install(DIRECTORY lsqlite3/ TYPE INCLUDE)
+install(DIRECTORY lsqlite3/include TYPE INCLUDE)
