--- a/lbase64/CMakeLists.txt
+++ b/lbase64/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.24)
 project(lbase64 LANGUAGES C VERSION 0.1.0)
 
 add_library(lbase64
-  lbase64/lbase64.c
+  lbase64.c
 )
 
 add_subdirectory(base64)
