--- a/lua-cjson/CMakeLists.txt
+++ b/lua-cjson/CMakeLists.txt
@@ -25,4 +25,9 @@ if(MSVC)
   add_definitions(-Dinline=__inline)
   #add_definitions(-Dsnprintf=_snprintf)
   add_definitions(-Dstrncasecmp=_strnicmp)
+  target_compile_options(
+    lua-cjson
+    PUBLIC
+    /wd4311
+  )
 endif()
